Added files for v1.0.0

--- a/node-sample/public/css/app.css
+++ b/node-sample/public/css/app.css
@@ -109,7 +109,7 @@ body {
     background-color: #d3d3d3;
     padding: 10px;
     position: absolute;
-    left: -275px;
+    left: 0px;
     top: 40px;
     z-index: 10;
     min-width: 260px;
@@ -227,9 +227,22 @@ button.btn {
   -webkit-transform: scaleX(-1);
 }
 
-#sample-dial-pad {
-    position: absolute;
-    z-index: 1002;
-    top: 150px;
-    margin-left: 75px;
+.btn-dialpad {
+    width: 30%
+}
+
+.btn-dialpad-conf {
+    width: 46%
+}
+
+.btn-dialpad-conf-add {
+    width: 35%
+}
+
+.btn-dialpad-conf-participants {
+    width: 57%
+}
+
+.btn-dialpad-switch {
+    width: 94%;
 }
