--- a/node-sample/public/views/home.html
+++ b/node-sample/public/views/home.html
@@ -1,127 +1,224 @@
 <div class="col-sm-12 jumbotron jumbotron-video clearfix">
- <div id="sample-dial-pad"></div>
-    <div id="address-box" style="display: none"></div>
 
-    <div class="form-group">
+  <div id="address-box" style="display: none"></div>
 
-        <div class="row">
-            <div class="btn-group">
-                <button id="btn-show-call" type="button" class="btn btn-primary btn-md" onclick="showCall(event)">
-                    <span>Call</span>
-                </button>
-                <button id="btn-show-conference" type="button" class="btn btn-primary btn-md" onclick="showConference(event)">
-                    <span>Conference</span>
-                </button>
-            </div>
-            <div class="alert alert-warning alert-dismissible" id="alerts-in-calls" role="alert"></div>
-        </div>
-        <br />
+  <div class="row">
 
-        <div class="input-group row col-xs-12 hidden" id="callForm">
-            <div class="input-group">
-                <div class="input-group-btn">
-                    <div class="col-sm-8 col-md-9">
-                        <label><input type="tel" id="callee" class="form-control" required="" name="callee" autocomplete="on"></label>
-                    </div>
-                    <div class="col-sm-2 col-md-1">
-                        <button id="btn-dial" class="btn btn-default btn-xs">
-                            <span class="glyphicon glyphicon-earphone"> Dial</span>
-                        </button>
-                    </div>
-                    <div class="col-xs-1">
-                        <button id="btn-hangup" type="button" class="btn btn-danger btn-xs" onclick="hangup()" disabled="">
-                            <span class="glyphicon glyphicon-phone-alt"></span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="input-group audio-only">
-                <label>&nbsp; Audio Only?<input name="audio-only" type="checkbox" id="callAudioOnly"></label>
-            </div>
+    <div class="col-md-8 col-lg-9">
+
+      <div class="row">
+
+        <div class="col-lg-12">
+          <label>
+            <span id="call-info"></span>
+          </label>
         </div>
 
-        <div class="input-group col-sm-11 hidden" id="confForm">
-            <div class="row">
-                <div class="input-group-btn">
-                    <div class="col-sm-2 col-md-2 col-lg-1">
-                        <button id="btn-create-conference" class="btn btn-default btn-xs">
-                            <span class="glyphicon glyphicon-earphone"> Start</span>
-                        </button>
-                    </div>
-                    <div class="col-sm-5 col-md-7">
-                        <label><input type="tel" id="participant" class="form-control" required="" name="participant" autocomplete="on" disabled=""></label>
-                    </div>
-                    <div class="col-sm-2 col-md-1">
-                        <button id="btn-add-participant" type="button" class="btn btn-default btn-xs" onclick="participant()" disabled="">
-                            <span class="glyphicon glyphicon-plus"> Add</span>
-                        </button>
-                    </div>
-                    <div class="col-xs-1">
-                        <button id="btn-end-conference" type="button" class="btn btn-danger btn-xs" onclick="endConference()" disabled="">
-                            <span class="glyphicon glyphicon-phone-alt"></span>
-                        </button>
-                    </div>
-                    <div class="col-xs-1">
-                        <button id="btn-participants-list" type="button" class="btn btn-default btn-xs" onclick="toggleParticipants()" disabled="">
-                            <span class="glyphicon glyphicon-user"> </span>
-                            <span id="expand-participants">
-                                <span class="glyphicon glyphicon-chevron-down"> </span>
-                            </span>
-                        </button>
-                    </div>
-                    <div class="col-sm-1">
-                        <div id="panel-participants" style="display:none">
-                            <div class="panel-header">
-                                <h3 class="panel-title">Participants</h3>
-                                <span class="panel-close glyphicon glyphicon-remove" onclick="hideParticipants()">&nbsp;</span>
-                            </div>
-                            <div id="participants-list" class="panel-body"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-             <div class="input-group audio-only">
-                <label>&nbsp; Audio Only?<input name="audio-only" type="checkbox" id="confAudioOnly"></label>
-            </div>
-        </div>
-    </div>
-    <div class="row video-wrap" id="video-wrap">
+      </div>
+
+      <div class="row video-wrap" id="video-wrap">
         <video id="remoteVideo" class="video-box col-xs-12  flip-horizontal"></video>
-        <div class="call-actions clearfix" id="call-actions">
-            <div class="col-xs-12" style="padding-left: 0">
-               <button id="btn-dialpad" type="button" class="btn btn-default btn-xs" onclick="showDialPad()">
-                   <span class="glyphicon glyphicon-dialpad"> Dialpad</span>
-                </button>
-                <button id="btn-hold" type="button" class="btn btn-default btn-xs" onclick="holdCall()" disabled>
-                    <span class="glyphicon glyphicon-pause"> Hold</span>
-                </button>
-                <button id="btn-resume" type="button" class="btn btn-default btn-xs" onclick="resumeCall()" disabled>
-                    <span class="glyphicon glyphicon-play"> Resume</span>
-                </button>
-                <button id="btn-move" type="button" class="btn btn-default btn-xs" onclick="moveCall()" disabled>
-                    <span class="glyphicon glyphicon-share"> Move</span>
-                </button>
-                <button id="btn-switch" type="button" class="btn btn-default btn-xs" onclick="switchCalls()" disabled>
-                    <span class="glyphicon glyphicon-retweet"> Switch</span>
-                </button>
-                <button id="btn-mute" type="button" class="btn btn-default btn-xs" onclick="mute()" disabled>
-                    <span class="glyphicon glyphicon-volume-off"> Mute</span>
-                </button>
-                <button id="btn-unmute" type="button" class="btn btn-default btn-xs" onclick="unmute()" disabled>
-                    <span class="glyphicon glyphicon-volume-up"> Unmute </span>
-                </button>
-                <button id="btn-transfer" type="button" class="btn btn-default btn-xs" onclick="transfer()" disabled>
-                    <span class=" glyphicon glyphicon-transfer"> Transfer </span>
-                </button>
-                <button id="btn-upgrade" type="button" class="btn btn-default btn-xs" onclick="upgrade()" disabled>
-                    <span class="glyphicon glyphicon-camera"> Upgrade </span>
-                </button>
-                <button id="btn-downgrade" type="button" class="btn btn-default btn-xs" onclick="downgrade()" disabled>
-                    <span class="glyphicon glyphicon-headphones"> Downgrade </span>
-                </button>
-
-            </div>
+        <div class="call-actions clearfix" id="call-actions" style="opacity: 0;">
+          <div class="col-xs-12" style="padding-left: 0">
+            <button id="btn-hold" type="button" class="btn btn-default btn-xs" onclick="holdCall()" disabled="">
+              <span class="glyphicon glyphicon-pause"> Hold</span>
+            </button>
+            <button id="btn-resume" type="button" class="btn btn-default btn-xs" onclick="resumeCall()" disabled="">
+              <span class="glyphicon glyphicon-play"> Resume</span>
+            </button>
+            <button id="btn-mute" type="button" class="btn btn-default btn-xs" onclick="muteCall()" disabled="">
+              <span class="glyphicon glyphicon-volume-off"> Mute</span>
+            </button>
+            <button id="btn-unmute" type="button" class="btn btn-default btn-xs" onclick="unMuteCall()" disabled="">
+              <span class="glyphicon glyphicon-volume-up"> Unmute </span>
+            </button>
+            <button id="btn-upgrade" type="button" class="btn btn-default btn-xs" onclick="upgradeCall()" disabled="">
+              <span class="glyphicon glyphicon-camera"> Upgrade </span>
+            </button>
+            <button id="btn-downgrade" type="button" class="btn btn-default btn-xs" onclick="downgradeCall()"
+                    disabled="">
+              <span class="glyphicon glyphicon-headphones"> Downgrade </span>
+            </button>
+          </div>
         </div>
         <video id="localVideo" class="video-box col-sm-4 col-xs-5 flip-horizontal"></video>
+      </div>
+
     </div>
+
+    <div class="col-xs-6 col-md-4 col-lg-3">
+
+      <div class="row">
+
+        <div class="col-lg-12">
+          <label>
+            <input type="text" id="destination" style="width:218px" class="form-control" required="" autocomplete="on">
+          </label>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-12">
+          <button id="btn-1" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 1 </span>
+          </button>
+          <button id="btn-2" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 2 </span>
+          </button>
+          <button id="btn-3" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 3 </span>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-12">
+          <button id="btn-4" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 4 </span>
+          </button>
+          <button id="btn-5" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 5 </span>
+          </button>
+          <button id="btn-6" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 6 </span>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-12">
+          <button id="btn-7" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 7 </span>
+          </button>
+          <button id="btn-8" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 8 </span>
+          </button>
+          <button id="btn-9" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 9 </span>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-12">
+          <button id="btn-*" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> * </span>
+          </button>
+          <button id="btn-0" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> 0 </span>
+          </button>
+          <button id="btn-#" type="button" class="btn btn-default btn-md btn-dialpad" onclick="clickBtn(event)">
+            <span class="glyphicon glyphicon-dialpad"> # </span>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="row" style="margin-top: 5px;">
+
+        <div class="col-lg-12">
+          <button id="btn-dial-video" class="btn btn-success btn-md btn-dialpad" onclick="dialVideo()">
+            <span class="glyphicon glyphicon-facetime-video"></span>
+          </button>
+
+          <button id="btn-dial-audio" class="btn btn-success btn-md btn-dialpad" onclick="dialAudio()">
+            <span class="glyphicon glyphicon-earphone"></span>
+          </button>
+
+          <button id="btn-hangup" type="button" class="btn btn-danger btn-md btn-dialpad" onclick="hangup()"
+                  disabled="">
+            <span class="glyphicon glyphicon-phone-alt"></span>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="row" style="margin-top: 5px;">
+
+        <div class="col-lg-12">
+          <button id="btn-start-video-conf" class="btn btn-default btn-md btn-dialpad-conf"
+                  onclick="startVideoConference()">
+            <span class="glyphicon glyphicon-facetime-video"> Conf</span>
+          </button>
+          <button id="btn-start-audio-conf" class="btn btn-default btn-md btn-dialpad-conf"
+                  onclick="startAudioConference()">
+            <span class="glyphicon glyphicon-earphone"> Conf</span>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="row" style="margin-top: 5px;">
+
+        <div class="col-lg-12">
+          <button id="btn-add-participant" type="button" class="btn btn-default btn-md btn-dialpad-conf-add"
+                  onclick="addConfParticipant()"
+                  disabled="">
+            <span class="glyphicon glyphicon-plus"> Add</span>
+          </button>
+          <button id="btn-participants-list" type="button" class="btn btn-default btn-md btn-dialpad-conf-participants"
+                  onclick="toggleParticipants()"
+                  disabled="">
+            <span class="glyphicon glyphicon-user"> Participants</span>
+          </button>
+          <div id="panel-participants" style="display:none">
+            <div class="panel-header">
+              <h3 class="panel-title">Participants</h3>
+              <span class="panel-close glyphicon glyphicon-remove" onclick="hideParticipants()">&nbsp;</span>
+            </div>
+            <div id="participants-list" class="panel-body"></div>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="row" style="margin-top: 5px;">
+
+        <div class="col-lg-12">
+          <button id="btn-move" type="button" class="btn btn-default btn-md btn-dialpad-conf" onclick="moveCall()"
+                  disabled="">
+            <span class="glyphicon glyphicon-share"> Move</span>
+          </button>
+          <button id="btn-transfer" type="button" class="btn btn-default btn-md btn-dialpad-conf"
+                  onclick="transferCall()" disabled="">
+            <span class=" glyphicon glyphicon-transfer"> Transfer</span>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="row" style="margin-top: 5px;">
+
+        <div class="col-lg-12">
+          <button id="btn-switch" type="button" class="btn btn-default btn-md btn-dialpad-switch"
+                  onclick="switchCalls()" disabled="">
+            <span class="glyphicon glyphicon-retweet"> Switch</span>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="row" style="margin-top: 5px;">
+
+        <div class="col-lg-12">
+          <label>
+            <span id="background-call-info"></span>
+          </label>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
 </div>
